Request Location Permission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">FakeitTillYouMakeit</string>
-    <string name="title_activity_main">Main</string>
+    <string name="title_activity_main">FakeitTillYouMakeit</string>
 </resources>
